--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ color:black;
 <tr><td>1</td><td>English</td></tr>
 <tr><td>2</td><td>P.E</td></tr>
 <tr><td>3</td><td>Math</td></tr>
-<tr><td>4</td><td><a href="http://www.youtube.com" target="_blank"><img src="lunch.JPG"/></td></tr>
+<tr><td>4</td><td><a href="http://www.youtube.com" target="_blank"><img src="lunch.jpg"/></td></tr>
 <tr><td>5</td><td>PLTW</td></tr>
 <tr><td>6</td><td>AVID</td></tr>
 <tr><td>7</td><td>Science</td></tr>
